// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications setNotificationsAsync before the study starts 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T08:09:55.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T10:36:58.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T13:19:34.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T16:36:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T19:15:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T22:00:55.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T08:16:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T10:43:42.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T12:46:55.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T16:59:14.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T19:12:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T22:31:25.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T08:17:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T10:33:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T12:37:51.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T16:46:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T18:48:06.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T23:25:57.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T08:05:15.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T11:25:24.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T13:20:51.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T16:16:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T19:15:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T22:42:43.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (1 ping from reaching bonus) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T17:22:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T18:38:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:08:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:56:19.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T11:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:47:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T19:28:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T23:21:52.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T09:04:17.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:54:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:19:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:55:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T19:06:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:25:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:39:12.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T11:06:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T12:03:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:18:28.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T19:16:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T23:28:54.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (no bonus is set) (jump to next week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T16:28:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T18:07:19.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T22:26:57.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T08:34:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T10:43:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T13:05:27.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T16:04:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T18:41:31.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T23:00:15.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T09:19:41.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T11:12:41.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T12:12:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T16:06:58.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T18:19:50.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T22:28:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T08:08:01.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T11:03:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T13:18:36.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T16:03:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T18:20:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T22:27:21.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (no bonus is set) (stay in current week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T18:38:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:08:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:56:19.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T11:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:47:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T19:28:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T23:21:52.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T09:04:17.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:54:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:19:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:55:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T19:06:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:25:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:39:12.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T11:06:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T12:03:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:18:28.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T19:16:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T23:28:54.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (reached bonus) (jump to next week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T16:28:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T18:07:19.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T22:26:57.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T08:34:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T10:43:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T13:05:27.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T16:04:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T18:41:31.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T23:00:15.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T09:19:41.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T11:12:41.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T12:12:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T16:06:58.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T18:19:50.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T22:28:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T08:08:01.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T11:03:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T13:18:36.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T16:03:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T18:20:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T22:27:21.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (reached bonus) (stay in current week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T18:38:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:08:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:56:19.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T11:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:47:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T19:28:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T23:21:52.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T09:04:17.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:54:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:19:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:55:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T19:06:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:25:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:39:12.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T11:06:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T12:03:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:18:28.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T19:16:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T23:28:54.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (still haven't reached bonus) (jump to next week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T13:19:34.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T16:36:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T19:15:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T22:00:55.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T08:16:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T10:43:42.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T12:46:55.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T16:59:14.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T19:12:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T22:31:25.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T08:17:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T10:33:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T12:37:51.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T16:46:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T18:48:06.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T23:25:57.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T08:05:15.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T11:25:24.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T13:20:51.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T16:16:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T19:15:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T22:42:43.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (still haven't reached bonus) (stay in current week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T10:33:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T12:37:51.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T16:46:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T18:48:06.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T23:25:57.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T08:05:15.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T11:25:24.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T13:20:51.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T16:16:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T19:15:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T22:42:43.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T08:16:30.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T11:26:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T12:47:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T16:59:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T18:49:30.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T22:33:47.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T08:11:01.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T10:01:13.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T13:00:58.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T16:19:00.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T18:18:17.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T22:07:22.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync near study ends 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-28T23:29:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T09:27:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T11:00:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T12:43:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T16:32:41.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T18:52:45.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T23:08:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T08:29:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T10:00:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T12:23:25.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T16:29:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T18:12:15.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync with existing notifications (at the start of the day) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T08:11:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T10:22:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T12:33:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T16:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T18:55:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:56:19.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T11:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:47:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T19:28:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T23:21:52.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T09:04:17.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:54:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:19:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:55:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T19:06:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:25:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:39:12.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T11:06:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T12:03:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:18:28.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T19:16:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T23:28:54.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync with existing notifications (in the middle of the day) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T16:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T18:55:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:56:19.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T11:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:47:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:11:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T19:28:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T23:21:52.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T09:04:17.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:54:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:19:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:55:10.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T19:06:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:25:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:39:12.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T11:06:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T12:03:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:18:28.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T19:16:11.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T23:28:54.000Z,
      },
    },
  ],
]
`;

exports[`pings data match: getAnswersAsync 1`] = `Array []`;

exports[`pings data match: getPingsAsync 1`] = `
Array [
  Object {
    "endTime": 2010-05-01T08:39:40.000Z,
    "id": "cat1",
    "notificationTime": 2010-05-01T08:25:05.000Z,
    "startTime": 2010-05-01T08:30:01.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": null,
    "id": "dog1",
    "notificationTime": 2010-05-01T10:20:00.000Z,
    "startTime": 2010-05-01T10:20:05.000Z,
    "streamName": "dog",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-01T20:59:20.000Z,
    "id": "wolf1",
    "notificationTime": 2010-05-01T19:00:05.000Z,
    "startTime": 2010-05-01T20:06:21.000Z,
    "streamName": "wolf",
    "tzOffset": 0,
  },
  Object {
    "endTime": null,
    "id": "cat2",
    "notificationTime": 2010-05-02T13:08:04.000Z,
    "startTime": 2010-05-02T14:59:01.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-03T09:26:02.000Z,
    "id": "cat3",
    "notificationTime": 2010-05-03T09:08:07.000Z,
    "startTime": 2010-05-03T09:26:00.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-10T23:59:58.000Z,
    "id": "cat4",
    "notificationTime": 2010-05-10T23:08:07.000Z,
    "startTime": 2010-05-10T23:09:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T08:19:58.000Z,
    "id": "cat5",
    "notificationTime": 2010-05-11T08:08:07.000Z,
    "startTime": 2010-05-11T08:09:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T10:11:58.000Z,
    "id": "dog2",
    "notificationTime": 2010-05-11T10:09:07.000Z,
    "startTime": 2010-05-11T10:10:09.000Z,
    "streamName": "dog",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T12:30:58.000Z,
    "id": "wolf2",
    "notificationTime": 2010-05-11T12:10:07.000Z,
    "startTime": 2010-05-11T12:20:09.000Z,
    "streamName": "wolf",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T16:33:58.000Z,
    "id": "lynx1",
    "notificationTime": 2010-05-11T16:11:07.000Z,
    "startTime": 2010-05-11T16:22:09.000Z,
    "streamName": "lynx",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T18:34:58.000Z,
    "id": "cat6",
    "notificationTime": 2010-05-11T18:12:07.000Z,
    "startTime": 2010-05-11T18:23:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T22:35:58.000Z,
    "id": "dog3",
    "notificationTime": 2010-05-11T22:13:07.000Z,
    "startTime": 2010-05-11T22:24:09.000Z,
    "streamName": "dog",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-12T12:15:58.000Z,
    "id": "cat7",
    "notificationTime": 2010-05-12T12:13:07.000Z,
    "startTime": 2010-05-12T12:14:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
]
`;
